[gd_scene load_steps=21 format=3 uid="uid://cws6do8hqg61r"]

[ext_resource type="Script" path="res://GameMode/Main-Multiplayer.gd" id="1_eo2t6"]
[ext_resource type="Texture2D" uid="uid://dnbygihft2q2e" path="res://GameMode/multiplayerHUD.png" id="1_eqtpc"]
[ext_resource type="Texture2D" uid="uid://2i46oohe8qcl" path="res://MainGameAssets/flag.png" id="2_hvk1d"]
[ext_resource type="Script" path="res://GameMode/MulHUD.gd" id="3_1bui1"]
[ext_resource type="Texture2D" uid="uid://chfrps0ofswyj" path="res://MainGameAssets/shieldIcon.png" id="3_dnqs8"]
[ext_resource type="Texture2D" uid="uid://dqwb37jx2yvwj" path="res://MainGameAssets/TilesetMedium.png" id="4_wablk"]
[ext_resource type="PackedScene" uid="uid://bbtibwayj5fyi" path="res://pause_menu.tscn" id="6_8tmsf"]
[ext_resource type="Texture2D" uid="uid://b8u8te2171hwm" path="res://MainGameAssets/pauseButton.png" id="7_klo5q"]
[ext_resource type="PackedScene" uid="uid://roob15vboiko" path="res://GameOver.tscn" id="8_1u2ri"]
[ext_resource type="PackedScene" uid="uid://cnpvhcib3m5he" path="res://tile_map_multiplayer.tscn" id="8_d06sb"]
[ext_resource type="PackedScene" uid="uid://dg3ggaar57mhu" path="res://tile_map_player_2.tscn" id="8_dtg6l"]
[ext_resource type="Texture2D" uid="uid://bsvi5lwt8du44" path="res://MainGameAssets/pauseHover.png" id="12_t7ffv"]
[ext_resource type="Texture2D" uid="uid://d73cgn6pxh3n" path="res://MainGameAssets/pausePressed.png" id="13_7lfux"]

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_e3tvs"]
texture = ExtResource("1_eqtpc")

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_wwwko"]
texture = ExtResource("4_wablk")
texture_region_size = Vector2i(50, 50)
0:0/0 = 0
1:0/0 = 0
2:0/0 = 0
3:0/0 = 0
4:0/0 = 0
5:0/0 = 0
6:0/0 = 0
0:1/0 = 0
1:1/0 = 0
2:1/0 = 0
3:1/0 = 0
4:1/0 = 0
5:1/0 = 0
6:1/0 = 0
7:1/0 = 0
0:2/0 = 0
1:2/0 = 0
2:2/0 = 0
3:2/0 = 0
4:2/0 = 0
5:2/0 = 0
6:2/0 = 0
7:2/0 = 0
0:3/0 = 0
1:3/0 = 0
2:3/0 = 0
3:3/0 = 0
4:3/0 = 0
5:3/0 = 0
6:3/0 = 0
7:3/0 = 0
0:4/0 = 0
1:4/0 = 0
2:4/0 = 0
3:4/0 = 0
4:4/0 = 0
5:4/0 = 0
6:4/0 = 0
7:4/0 = 0
0:5/0 = 0
1:5/0 = 0
2:5/0 = 0
3:5/0 = 0
4:5/0 = 0
5:5/0 = 0
6:5/0 = 0
7:5/0 = 0
0:6/0 = 0
1:6/0 = 0
2:6/0 = 0
3:6/0 = 0
7:0/0 = 0

[sub_resource type="TileSet" id="TileSet_2pxmc"]
tile_size = Vector2i(50, 50)
sources/0 = SubResource("TileSetAtlasSource_wwwko")

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_yyxwi"]
texture = ExtResource("7_klo5q")

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_0xg8l"]
texture = ExtResource("12_t7ffv")

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_awopu"]
texture = ExtResource("13_7lfux")

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_kxln4"]

[node name="Multiplayer" type="Node2D"]
script = ExtResource("1_eo2t6")

[node name="MulHUD" type="Panel" parent="."]
offset_right = 1920.0
offset_bottom = 1080.0
theme_override_styles/panel = SubResource("StyleBoxTexture_e3tvs")
script = ExtResource("3_1bui1")

[node name="Player1HUD" type="Panel" parent="MulHUD"]
layout_mode = 0

[node name="FlagPlayer1" type="Sprite2D" parent="MulHUD/Player1HUD"]
position = Vector2(247.5, 108)
texture = ExtResource("2_hvk1d")

[node name="RemainingMinesPLayer1" type="Label" parent="MulHUD/Player1HUD"]
layout_mode = 0
offset_left = 293.5
offset_top = 39.0
offset_right = 455.5
offset_bottom = 172.0
theme_override_font_sizes/font_size = 95
text = "000"

[node name="ShieldIconTextureRect" type="TextureRect" parent="MulHUD/Player1HUD"]
layout_mode = 0
offset_left = 481.0
offset_top = 56.0
offset_right = 629.0
offset_bottom = 231.0
scale = Vector2(0.578767, 0.604286)
texture = ExtResource("3_dnqs8")

[node name="ShieldStatusTextureRect" type="TextureRect" parent="MulHUD/Player1HUD"]
layout_mode = 0
offset_left = 591.915
offset_top = 49.0
offset_right = 714.915
offset_bottom = 167.0

[node name="Player2HUD" type="Panel" parent="MulHUD"]
layout_mode = 0

[node name="FlagPlayer2" type="Sprite2D" parent="MulHUD/Player2HUD"]
position = Vector2(1246.27, 108)
texture = ExtResource("2_hvk1d")

[node name="RemainingMinesPlayer2" type="Label" parent="MulHUD/Player2HUD"]
layout_mode = 0
offset_left = 1295.06
offset_top = 39.0
offset_right = 1457.06
offset_bottom = 172.0
theme_override_font_sizes/font_size = 95
text = "000"

[node name="ShieldIconTextureRect" type="TextureRect" parent="MulHUD/Player2HUD"]
layout_mode = 0
offset_left = 1491.99
offset_top = 56.0
offset_right = 1639.99
offset_bottom = 231.0
scale = Vector2(0.578767, 0.604286)
texture = ExtResource("3_dnqs8")

[node name="ShieldStatusTextureRect" type="TextureRect" parent="MulHUD/Player2HUD"]
layout_mode = 0
offset_left = 1600.0
offset_top = 49.0
offset_right = 1723.0
offset_bottom = 167.0

[node name="TileMapPlayer1" parent="." instance=ExtResource("8_d06sb")]
position = Vector2(77.565, 313.185)
tile_set = SubResource("TileSet_2pxmc")
layer_0/name = "Backgrounds"
layer_1/name = "Mines"
layer_3/name = "Powerups"
layer_6/name = "Hovers"
layer_7/name = "Exclamation"
layer_7/enabled = true
layer_7/modulate = Color(1, 1, 1, 1)
layer_7/y_sort_enabled = false
layer_7/y_sort_origin = 0
layer_7/z_index = 0
layer_7/tile_data = PackedInt32Array()

[node name="TileMapPlayer2" parent="." instance=ExtResource("8_dtg6l")]
position = Vector2(1094.98, 311.75)
player_id = 2

[node name="GameOver" parent="." instance=ExtResource("8_1u2ri")]
process_mode = 2

[node name="PauseMenu" parent="." instance=ExtResource("6_8tmsf")]

[node name="PauseButton" type="Button" parent="."]
offset_left = 889.0
offset_top = 35.0
offset_right = 1037.0
offset_bottom = 160.0
theme_override_styles/normal = SubResource("StyleBoxTexture_yyxwi")
theme_override_styles/hover = SubResource("StyleBoxTexture_0xg8l")
theme_override_styles/pressed = SubResource("StyleBoxTexture_awopu")
theme_override_styles/focus = SubResource("StyleBoxEmpty_kxln4")

[connection signal="restart" from="GameOver" to="." method="_on_game_over_restart"]
[connection signal="pressed" from="PauseButton" to="." method="_on_pause_button_pressed"]
